--- a/.github/workflows/test_windows_commands.yml
+++ b/.github/workflows/test_windows_commands.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build:
     runs-on: windows-2022
+    defaults:
+      run: 
+        shell: msys2 {0}
     steps:
       - uses: actions/checkout@v4  # リポジトリをチェックアウト
 
