workflow上で実行しているシェル名を出力するように変更

--- a/.github/workflows/test_windows_commands.yml
+++ b/.github/workflows/test_windows_commands.yml
@@ -25,4 +25,7 @@ jobs:
             git
 
       - name: Build
-        run: ./tools/for_workflow/for_windows10.sh # 例: makeコマンドを実行（Makefileがある前提）
+        run: |
+          ./tools/for_workflow/for_windows10.sh # 例: makeコマンドを実行（Makefileがある前提）
+          echo $MSYSTEM
+
