--- a/.github/workflows/test_ubuntu_commands.yml
+++ b/.github/workflows/test_ubuntu_commands.yml
@@ -1,12 +1,14 @@
 name: test_ubuntu_commands
 
+on: workflow_dispatch
+
 on:
   push:
     paths:
       - 'tools/for_workflow/for_ubuntu22.04.sh'  # 指定したファイル/ディレクトリが更新された場合のみ実行（例: src以下のファイル）
 
 jobs:
-  example:
+  ubuntu22.04:
     runs-on: ubuntu-22.04
     defaults:
       run:
@@ -18,6 +20,5 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: 
+      - name: run ubuntu commands
         run: ./tools/for_workflow/for_ubuntu22.04.sh
-        
