--- a/.github/workflows/test_ubuntu_commands.yml
+++ b/.github/workflows/test_ubuntu_commands.yml
@@ -6,7 +6,7 @@ on:
       - 'tools/for_workflow/for_ubuntu22.04.sh'  # 指定したファイル/ディレクトリが更新された場合のみ実行（例: src以下のファイル）
 
 jobs:
-  ubuntu22.04:
+  ubuntu-22_04:
     runs-on: ubuntu-22.04
     defaults:
       run:
