--- a/.github/workflows/test_manual_ubuntu_commands.yml
+++ b/.github/workflows/test_manual_ubuntu_commands.yml
@@ -3,7 +3,7 @@ name: test_ubuntu_commands
 on: workflow_dispatch
 
 jobs:
-  ubuntu22.04:
+  ubuntu-22_04:
     runs-on: ubuntu-22.04
     defaults:
       run:
